# ChattyM

./: .dockerignore  .env.example  .gitignore  Dockerfile  NOTES  README.md  docker-compose.yml  pyproject.toml
apps/comments/: admin.py  forms.py  models.py  urls.py  views.py
apps/core/: urls.py  views.py
apps/likes/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
apps/messaging/: admin.py  context_processors.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/notifications/: admin.py  apps.py  context_processors.py  models.py  services.py  urls.py  views.py
apps/posts/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py  views_api.py
apps/subscriptions/: admin.py  models.py  urls.py  views.py
apps/users/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
docker/: entrypoint.sh
fixtures/: comments_fixture.json  posts_fixture.json  users_emails_fixture.json  users_fixture.json
static/css/: base.css  profile.css  theme.css
static/js/: comments.js  likes.js  messaging.js  notifications.js  subscriptions.js  theme-toggle.js
templates/: base.html  main.html
templates/account/: email_confirm.html  email_confirmation_sent.html  email_confirmed.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/includes/: compose_message_modal.html  navbar.html  (+6 more)
tests/: test_posts_api.py
utils/: posts_utils.py
(+19 files in other folders)
